# AICW

./: .gitignore  Full_NN_c.py  README.md  UP2002235_part_1.py  UP2002235_part_2.py  UP2002235_part_3.py  UP2002235_part_4.py  UP2002235_part_4_2.py  UP2002235_part_5.py  UP2002235_part_5_2.py  UP2002348_part1.py  UP2002348_part_5.py  cheat_sheet.py  ga.py  gridworld.py  pyproject.toml
